[package]
name = "pb_file_reader"
version = "0.1.0"
edition = "2024"
authors = ["zhang_yaohui"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
coarsetime = "0.1.36"
crossbeam = "0.8.4"
csv = "1.4.0"
ctor = "0.6.1"
dashmap = "6.1.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
ftlog = "0.2.15"
notify = "8.2.0"
once_cell = "1.21.3"
rustc-hash = "2.1.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }


[lib]
name = "file_reader"  # 库名
path = "src/lib.rs"   # 库文件路径
